[gd_scene load_steps=7 format=3 uid="uid://2qj4at653dfr"]

[ext_resource type="Script" path="res://mob/mob.gd" id="1_q87nt"]
[ext_resource type="Texture2D" uid="uid://blnap5w4wofst" path="res://mob/Flowey.png" id="2_8bgnk"]
[ext_resource type="Texture2D" uid="uid://cgrra6f5gqhe1" path="res://mob/mounstros.png" id="2_aqiim"]
[ext_resource type="Texture2D" uid="uid://d3ql6yg327brk" path="res://mob/Frogit.png" id="3_pao1k"]
[ext_resource type="Texture2D" uid="uid://cmnukmq23kyq" path="res://mob/knigth moth.png" id="4_d31au"]
[ext_resource type="Texture2D" uid="uid://byvwkfs6ab7or" path="res://mob/blink.png" id="6_i0jhe"]

[node name="MOB" type="Area2D"]
position = Vector2(2, -57)
script = ExtResource("1_q87nt")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-11, -14)

[node name="SpriteA" type="Sprite2D" parent="."]
visible = false
position = Vector2(-64, -66.6)
texture = ExtResource("2_8bgnk")

[node name="SpriteB" type="Sprite2D" parent="."]
visible = false
position = Vector2(-67, -75.7503)
texture = ExtResource("3_pao1k")

[node name="SpriteC" type="Sprite2D" parent="."]
visible = false
position = Vector2(-52.7, -192.2)
texture = ExtResource("4_d31au")

[node name="SpriteD" type="Sprite2D" parent="."]
visible = false
position = Vector2(-59.8, -87.8)
texture = ExtResource("2_aqiim")

[node name="SpriteE" type="Sprite2D" parent="."]
visible = false
position = Vector2(-62.5789, -84.6297)
texture = ExtResource("6_i0jhe")

[node name="CollisionA" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-64, -66.6)
polygon = PackedVector2Array(1, -33, 4, -38, 11, -40, 19, -42, 24, -40, 27, -35, 31, -30, 29, -24, 40, -19, 41, -10, 41, -6, 34, -2, 27, -1, 32, 5, 30, 12, 25, 17, 16, 19, 6, 14, 4, 17, 2, 21, 7, 26, 9, 32, 15, 35, 16, 42, 13, 44, 10, 46, -9, 45, -14, 41, -15, 38, -14, 35, -12, 32, -3, 31, -6, 26, -8, 23, -8, 18, -19, 20, -23, 17, -28, 14, -29, 7, -27, 1, -31, -1, -38, -5, -39, -15, -35, -22, -28, -24, -27, -33, -25, -36, -24, -39, -21, -41, -14, -42, -7, -40, -1, -35)
disabled = true

[node name="CollisionB" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-66, -75.7503)
scale = Vector2(0.927083, 0.932428)
polygon = PackedVector2Array(-11, -58.8, -11, -56.7, -1.1, -45, 3.1, -45, 18.1, -61, 29.8, -61, 39, -51.8, 39, -48.6, 43, -41.5, 43, -34, 51, -23.7, 51, -13.3, 45.1, -5.7, 57, 6.2, 57, 14, 59.3, 30, 57.4, 30, 53.7, 38.8, 60, 43.5, 60, 57, 59, 57, -60, 56, -60, 45.5, -52, 39.9, -58, 28.5, -58, 15.8, -55.6, 6, -54, 6, -46, -5, -43, -5, -50, -13.2, -50, -24, -48, -24, -43.1461, -33.2465, -42, -40.4, -37.4, -52, -35.8, -52, -29, -58.8, -29, -61.3)
disabled = true

[node name="CollisionC" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-52.7, -191.2)
scale = Vector2(0.910539, 0.908879)
polygon = PackedVector2Array(1, -52.3, 3.7, -49.6, 17, -53.2, 17, -50.6, 25, -45.6, 25, -41.9, 27.5, -29.5, 24.7, -29.5, 20.7, -26.5, 27, -26.5, 27, -24.4, 35, -17.4, 35, -4.8, 28.1, 3.9, 31.5, 7.9, 35, 3.5, 51, 3.5, 51, 22.5, 46, 28.5, 41, 28.5, 41, 29.2, 32, 40.5, 28.3, 40.5, 29.5, 46.5, 27, 46.5, 22, 52.5, 11.1, 52.5, 10.4, 53.5, -3, 53.5, -8.4, 48.7, -13.2, 53.5, -27.8, 53.5, -30, 51.3, -30, 40.7, -28.7, 39.4, -40, 33.8, -40, 26.9, -39.4, 25.9, -48, 17.3, -48, 6.9, -45.8, 3.4, -51, -3.5, -51, -18.5, -49.9, -18.5, -42.9, -26.5, -39.3, -26.5, -44, -30.6, -44, -41, -41.3, -46.5, -39.7, -46.5, -32.8, -52.5, -24.4, -52.5, -20.9, -50.3, -18, -52.5, -18, -53.5, -12.9, -53.5, -9.4, -52.2, -4.9, -53.5, 1, -53.5)
disabled = true

[node name="CollisionD" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-59.8, -87.8)
scale = Vector2(0.933673, 0.957516)
polygon = PackedVector2Array(23, -73, 23, -71.5, 33, -62.4, 33, -58.5, 35.3, -41.5, 33.4, -41.5, 31.6, -35.9, 49, -5.5, 49, 14.6, 42.1, 24.5, 38.6, 24.5, 35, 25.9, 35, 27.2, 31, 32.3, 31, 35.1, 34.7, 54.5, 37.7, 54.5, 47, 61.5, 47, 71.3, 41.8, 76.5, 0.400002, 76.5, -2.6, 64.5, -0.400002, 64.5, 1.1, 60.5, -2, 60.5, -2, 59.9, -3, 60.1, -3, 64.7, -5.3, 76.5, -36.8, 76.5, -42, 71.3, -42, 61.3, -35, 57.3, -35, 56.5, -36.2, 40.5, -34.6, 40.5, -32.5, 33, -35.4, 26.5, -38.7, 26.5, -49, 18.3, -49, -5.4, -39.3, -27.5, -38, -27.5, -32, -35.2, -32, -35.9, -36, -43, -36, -58, -33.3, -63.5, -32, -63.5, -22.9, -73.5, -19.6, -73.5, -14, -75.9, -14, -76.5, 13, -76.5)
disabled = true

[node name="CollisionE" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-62.5789, -84.6297)
scale = Vector2(0.942267, 0.959422)
polygon = PackedVector2Array(-27.5, -64.5, -21.5, -59.5, -21.5, -51.5, -29.5, -45.5, -29.5, -44.3, -28.7, -43.5, -28.1, -43.5, -7.9, -52.5, 8.5, -52.5, 8.5, -50.9, 27.1, -44.2, 27.4, -44.8, 20.5, -51.7, 20.5, -60.5, 22.5, -60.5, 27.5, -66.5, 39, -66.5, 44.5, -63.8, 44.5, -62.2, 50.5, -53.1, 50.5, -38, 49.8, -36.5, 51.3, -36.5, 58.5, -29.3, 58.5, -14.5, 56.5, -14.5, 38.5, 9.2, 38.5, 27.9, 44.5, 36.9, 44.5, 44, 41.8, 49.5, 40.5, 49.5, 35.5, 55.5, 28.5, 55.5, 28.5, 53.6, 24.5, 51.1, 24.5, 51.9, 17.8, 67.5, 6.5, 67.5, 6.5, 66.9, 0.799999, 36.4, -0.700001, 36, -5.8, 67.5, -17.5, 67.5, -23.5, 58.1, -23.5, 53.1, -24.7, 50, -37.5, 56.9, -37.5, 53.5, -43.5, 48.5, -43.5, 45.1, -46.2, 35.5, -43.7, 35.5, -39.5, 27.9, -39.5, 10.5, -42.9, 2.5, -59.5, -15.7, -59.5, -29.3, -52.3, -36.5, -49.5, -36.5, -49.5, -37.5, -51.8, -54.5, -49.9, -54.5, -46.9, -62.5, -45, -62.5, -41.5, -64.6, -41.5, -66.5, -27.5, -66.5)
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
